Fri Jan 3 2014 arton
 *ext/rjb.c
	RJB_VERSION -> 1.4.9
 *ext/rjbexception.c
	make J#cause to the instance method for resolving Ruby 2.1 confliction.
Sun Jun 23 2013 arton
 *ext/rjb.c
	RJB_VERSION -> 1.4.8
	create typed array exactly (reported by reinvanmeeteren on https://github.com/arton/rjb/issues/23)
 *test/test.rb
	add typed array test
 *test/Test.java
	add typed array test
Tue Jun 18 2013 arton
 *ext/load.c
	check fiddle has dlopen (after ruby 2.0).
Tue Jun 18 2013 arton
 *ext/rjb.c
	RJB_VERSION -> 1.4.7
 *ext/load.c
	rqeuire fiddle first, then dl. the patch originally created by Victor Lellis.
Fri May 17 2013 arton
 *test/test.rb
	add Byte test
Sun Apr 48 2013 arton
 *ext/rjb.o
	remove binary
 *ext/rjb.obj
	remove binary
Sat Jan 26 2013 arton
 *ext/rjb.c
	RJB_VERSION -> 1.4.6 for new gem
 *RBridge.class
	Java Major Version -> 46
Sun Jan 13 2013 arton
 *test/test.rb
	add bignum argument test
 *ext/rjb.c
	accept bignum argument for 'J'
	this bug(or at least mis spec.) was pointed by janroesner. Thanks janroesner !
Tue Dec 17 arton
 *test/test.rb
	add test_norarg_invoke
 *ext/rjb.c
	_invoke accepts noarg method call (reported by xiao li, thanks)
	RJB_VERSION -> 1.4.4 for new gem
Wed Nov 14 arton
 *ext/rjb.c
	RJB_VERSION -> 1.4.3 for new gem
 *ext/extconf.rb
	remove checking dl.h, rjb not need to include it.
Sat Oct 6 arton
 *ext/rjb.c
	RJB_VERSION -> 1.4.2
 *test/osx_jvmcheck.rb
	display vendor and version of JRE for OSX load test
 *test/osx_loadtest.rb
	add Oracle JVM support test for OSX
 *lib/rjb.rb
	add Oracle JVM support for OSX
Sun Aug 19 arton
 *ext/rjb.c
	export bound object's original ruby object as @wrapped
	RJB_VERSION -> 1.4.1
 *lib/rjb.rb
	define Rjb_JavaBridge class for support @wrapped delegation
 *test/test.rb
	add @wrapped object invoking test
Sun Apr 22 arton
 *ext/rjb.c
	add Rjb_JavaProxy#initialize_proxy method for preparing proxy instance.
	RJB_VERSION -> 1.4.0
 *lib/rjb