@@ -34,7 +34,7 @@ static VALUE missing_delegate(int argc, VALUE* argv, VALUE self)
 
 static VALUE get_cause(VALUE self)
 {
-  return rb_ivar_get(self, rb_intern("@cause"));
+  return rb_funcall(rb_ivar_get(self, rb_intern("@cause")), rb_intern("cause"), 0);
 }
 
 static VALUE exception_to_s(VALUE self)
@@ -71,8 +71,8 @@ VALUE rjb_get_exception_class(JNIEnv* jenv, jstring str)
     if (rexp == Qnil)
     {
 	rexp = rb_define_class(pcls, rb_eStandardError);
-	rb_define_method(rexp, "cause", get_cause, -1);
-        rb_define_method(rexp, "method_missing", missing_delegate, 0);
+	rb_define_method(rexp, "cause", get_cause, 0);
+        rb_define_method(rexp, "method_missing", missing_delegate, -1);
         rb_define_method(rexp, "to_str", exception_to_s, 0);
 #if defined(HAVE_RB_HASH_ASET) || defined(RUBINIUS)
 	rb_hash_aset(rjb_loaded_classes, cname, rexp);
